# Obsitty

./: README.md
Obsitty/: CMakeLists.txt  LICENSE  README.md
Obsitty/nix/: flake.nix
Obsitty/src/: buildscript.sh  main.cpp
cmake/: CMakeLists.txt
nix/: flake.nix
src/: main.cpp  meson.build
src/Text_edditor/: text_edit.cpp
